[metadata]
name = SQUID_SSA_Char
author = JDG, EEM
version = 0.0.0
description = SQUID Series Array Testing Script
long_description = file: README.md
long_description_content_type = text/x-md
keywords = hardware, control, characterization
# license = MIT
home_page = https://github.com/DarkTyr/squid_ssa_char
project_urls =
    Issue Tracker = https://github.com/DarkTyr/squid_ssa_char/issues
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Utilities

[options]
packages = find:
include_package_data = true
install_requires =
    setuptools
    numpy
    matplotlib
    tqdm
    pyserial
    pyyaml

[options.entry_points]
console_scripts =
    SSA_data_collection = squid_ssa_char.scripts.SSA_data_collection:main

[bdist_wheel]
universal = 1
